# VIdeo-Search-from-video

./: CMakeLists.txt  busqueda_similitud.cpp  deteccion_apariciones.cpp  extraccion_caracteristicas.cpp  main.cpp
src/: EuclideanDistance.cpp  EuclideanDistance.h  FrameContainer.cpp  FrameContainer.h  FrameIndexContainer.cpp  FrameIndexContainer.h  FrameIndexes.cpp  FrameIndexes.h  InputFileControl.cpp  InputFileControl.h  ManhattanDistance.cpp  ManhattanDistance.h  QueryDistance.cpp  QueryDistance.h  SimilaritySearch.cpp  SimilaritySearch.h  VideoContainer.cpp  VideoContainer.h  VideoFindResult.cpp  VideoFindResult.h  VideoFinder.cpp  VideoFinder.h
